--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
             <h2>The Short</h2><br>
             <p class="p">Amirreza Abdolrahimi is a front-end web devoloper and he is trying to make the best websites possible and learn other stuff like Cybersecurity, C# and more ! he works in a room in the capital of iran. This is what his room looks like now ! </p>
             <br><br>
-            <img src="images/pc10.jpg" alt="amiriar`s room" class="meimg">
+            <img src="images/Pc10.jpg" alt="amiriar`s room" class="meimg">
         </div>
         <div class="col c3">
             <h2>The Long</h2><br>
