--- a/home.html
+++ b/home.html
@@ -42,6 +42,7 @@
             <p class="p">Amirreza Abdolrahimi is a front-end web devoloper and he is trying to make the best websites possible and learn other stuff like Cybersecurity, C# and more ! he works in a room in the capital of iran. This is what his room looks like now ! </p>
             <br><br>
             <img src="images/Pc10.jpg" alt="amiriar`s room" class="meimg">
+            <p style="font-size: 12px;">Can`t Even Take a Picture &#128128;</p>
         </div>
         <div class="col c3">
             <h2>The Long</h2><br>
@@ -63,7 +64,7 @@
             <input type="date" name="date" id="date"><br><br><br><br>
             <label for="date" style="font-size: 10px;">About<span style="color: red;">&nbsp;*</span></label><br>
             <textarea name="about" id="about" cols="34" rows="10"></textarea><br>
-            <input type="button" name="submit" id="submit" value="&#9989;" style="height: 70px; width: 100px;">
+            <input type="button" name="submit" id="submit" value="&#128235;" style="height: 70px; width: 100px;">
             </form>
         </div>
     </article><br><br><br><br>
