--- a/Welcome.html
+++ b/Welcome.html
@@ -76,7 +76,7 @@
 
             <div class="text">
                 <article>
-                    <p>This Is The Amiriar`s Official Website !<br>Come On In !</p>
+                    <p>This Is The Amiriar's Official Website !<br>Come On In !</p>
                     <a href="home.html"><button>Lets GO !</button></a>
                 </article>
             </div>
