--- a/home.html
+++ b/home.html
@@ -42,11 +42,11 @@
             <p class="p">Amirreza Abdolrahimi is a front-end web devoloper and he is trying to make the best websites possible and learn other stuff like Cybersecurity, C# and more ! he works in a room in the capital of iran. This is what his room looks like now ! </p>
             <br><br>
             <img src="images/Pc10.jpg" alt="amiriar`s room" class="meimg">
-            <p style="font-size: 12px;">Can`t Even Take a Picture &#128128;</p>
+            <p style="font-size: 12px;">Can't Even Take a Picture &#128128;</p>
         </div>
         <div class="col c3">
             <h2>The Long</h2><br>
-            <p class="p">I was born in tehran, son of an accountant and a financial manager. I was having a great time grwoing up untill i was 15, that was the momment i got obsessed  with making websites ! And i strated learing it by an app called Mimo, I learned some basics of HTML and CSS, BUT THAT WASN`T ENOUGH !! <br><br> so i bought some online courses and here i am ! You think i have been good enough to do what im tring to do ? I dont know man, Maybe we will achive it in another day...  <br><br> If you are interested in working with me, please fill out the form below !</p>
+            <p class="p">I was born in tehran, son of an accountant and a financial manager. I was having a great time grwoing up untill i was 15, that was the momment i got obsessed with making websites ! And i strated learing it by an app called Mimo, I learned some basics of HTML and CSS, BUT THAT WASN'T ENOUGH !! <br><br> so i bought some online courses and here i am ! You think i have been good enough to do what im tring to do ? I dont know man, Maybe we will achive it in another day...  <br><br> If you are interested in working with me, please fill out the form below !</p>
             
         </div>
         <div class="col c4">
