--- a/contatcs2.html
+++ b/contatcs2.html
@@ -45,8 +45,46 @@
         <p>Wanna Work? This is The Best Place !</p>
     </section>
     <section style="height: 103vh;">
-        <h1>Thank You !</h1>
+        <h1 onclick="rock();">Thank You !</h1>
     </section>
+        <script>
+        function rock(){
+            const choices = ["rock", "paper", "scissors"];
+
+            const userChoice = prompt("Choose rock, paper, scissors");
+            if (userChoice) {
+                console.log(`You choose: ${userChoice}`);
+            } else {
+                alert("You cheated!")
+            }
+            
+            const randomNumber = Math.floor(Math.random() * 3);
+            const computerChoice = choices[randomNumber];
+            console.log(`Computer chooses: ${computerChoice}`);
+            
+            if (userChoice === computerChoice) {
+                alert("It's a tie");
+            } else if (userChoice === "rock") {
+                if (computerChoice === "scissors") {
+                    alert("You Win!");
+                } else {
+                    alert("you lose!")
+                }
+            } else if (userChoice === "paper") {
+                if (computerChoice === "rock") {
+                    alert("You win!")
+                } else {
+                    alert("You lose!")
+                }
+            } else if (userChoice === "scissors") {
+                if (computerChoice === "paper") {
+                    alert("You win!")
+                } else {
+                    alert("You lose!")
+                }
+            }
+        }
+    </script>
 </div>
 </body>
 </html>
