--- a/contatcs2.html
+++ b/contatcs2.html
@@ -40,7 +40,7 @@
         <p>Youtube channel And Noting else !</p>
     </section>
     <section class="hidden">
-        <a href="https://www.linkedin.com/in/امیررضا-عبدالرحیمی-490b371b3/" target="_blank"><img src="images/linkedin.png" class="card-image" alt="d pic"></a>
+        <a href="https://www.linkedin.com/in/amirreza-abdolrahimi-a502a726b/" target="_blank"><img src="images/linkedin.png" class="card-image" alt="d pic"></a>
         <h1>Linkedin</h1>
         <p>Wanna Work? This is The Best Place !</p>
     </section>
