--- a/home.html
+++ b/home.html
@@ -35,13 +35,13 @@
     <br><br><br><br><br>
     <article class="article">
         <div class="col c1">
-            <img src="images/Sup.jpg" alt="Me as a kid :D" class="meimg">
+            <img src="images/Sup.jpg" alt="Me as a kid :D" class="meimg" draggable="false">
         </div>
         <div class="col c2">
             <h2>The Short</h2><br>
             <p class="p">Amirreza Abdolrahimi is a front-end web devoloper and he is trying to make the best websites possible and learn other stuff like Cybersecurity, C# and more ! he works in a room in the capital of iran. This is what his room looks like now ! </p>
             <br><br>
-            <img src="images/Pc10.jpg" alt="amiriar`s room" class="meimg">
+            <img src="images/Pc10.jpg" alt="amiriar`s room" class="meimg" draggable="false">
             <p style="font-size: 12px;">Can't Even Take a Picture &#128128;</p>
         </div>
         <div class="col c3">
